    - Breaking changes in Data::Hopen::G:
        - Remove Data::Hopen::G::Op --- it didn't add anything over ...::Node,
          so just use Node directly.
    - Breaking changes in Data::Hopen::Visitor:
        - Merge visit_goal() and visit_node() into a single visit() with
          a new parameter list
        - Provide the list of predecessor nodes to the visitor
    - Data::Hopen::G::Runnable::_run() can now return undef, and ...::run()
      will replace it with {}.
    - New attribute Data::Hopen::G::DAG::goal_class to specify the class
      used by goal()

0.000019    2020-12-26
    - No longer treat -phase specially when running DAGs.

0.000018    2020-05-14
    - Fix dependencies (again) (cpantesters++)

0.000017    2020-05-09
    - Fix dependencies
    - No functional changes since 0.000016

0.000016    2020-05-09 (TRIAL RELEASE)
    - cpanfile now provided for easier installation of dependencies
    - An edge can have multiple links, and they run in sequence
    - More tests

0.000015    2019-06-04
    - No changes - stable release of 0.000014

0.000014    2019-05-30 (TRIAL RELEASE)
    - Added Data::Hopen::G::GraphBuilder::to()
    - Fix test failures on earlier Perl versions

0.000013    2019-05-26
    - Functional changes throughout

0.000012    2019-02-28
    - No changes - stable release of 0.000011

0.000011    2019-02-28 (TRIAL RELEASE)
    - Bugfixes in Scope

0.000010    2019-02-14
    - Finished removing code now in App::hopen

0.000009    2019-02-13 (TRIAL RELEASE)
    - Renamed from Build::Hopen to Data::Hopen

0.000008    2019-02-09 (TRIAL RELEASE)
    (as Build::Hopen)
    - Tweaked File::Glob usage to support Perl 5.14

0.000007    2019-02-08 (TRIAL RELEASE)
    (as Build::Hopen)
    - First version that can generate a Makefile

0.000006    2019-02-06 (TRIAL RELEASE)
    (as Build::Hopen)
    - Substantially expanded

0.000003    2018-01-02 (TRIAL RELEASE)
    (as Build::Hopen)
    - First full trial release
