@@ -15,6 +15,8 @@ Revision history for Data-Hopen
       will replace it with {}.
     - New attribute Data::Hopen::G::DAG::goal_class to specify the class
       used by goal()
+    - Data::Hopen::Util::Data: New function fwdopts() for the most common
+      case of forward_opts()
 
 0.000019    2020-12-26
     - No longer treat -phase specially when running DAGs.
